--- a/homepage.html
+++ b/homepage.html
@@ -19,11 +19,11 @@
      <link rel="stylesheet" href="scss/main.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
-  <body>
+  <body class="homepage">
 
     <div class="wrapper container-fluid">
       <div class="sign">
-        <div class="row light-wrapper">
+        <div class="row light-row">
           <div class="col-xs-1 light"></div>
           <div class="col-xs-1 light"></div>
           <div class="col-xs-1 light"></div>
@@ -37,45 +37,15 @@
           <div class="col-xs-1 light"></div>
           <div class="col-xs-1 light"></div>
         </div>
+
         <div class="row">
-          <!-- <div class="col-xs-1 side-light-border"> -->
-              <!-- <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div> -->
-          <!-- </div> -->
-
-          <div class="col-xs-12 inner-sign">
-            <h1> MIAMI MADNESS </h1>
-            <h2> A Memory Game </h2>
+          <div class="col-xs-1 edge"></div>
+          <div class="col-xs-10 inner-sign">
+            <h2> MIAMI MADNESS </h2>
+            <h3> A Memory Game </h3>
           </div>
-
-          <!-- <div class="col-xs-1 side-light-border">
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-              <div class="row">
-                <div class="col-xs-12 light-vertical"></div>
-              </div>
-          </div> -->
-
-
+          <div class="col-xs-1 edge"></div>
         </div>
-
 
         <div class="row">
           <div class="col-xs-1 light"></div>
@@ -93,8 +63,28 @@
         </div>
       </div>
 
-
     </div>
+
+
+    <div class="row">
+      <h3 class="instructions-title">Instructions</h3>
+    </div>
+
+    <div class="row wrapper-instructions">
+      <div class="col-sm-2 palm-tree"> </div>
+      <div class="col-sm-1"> </div>
+      <div class="col-sm-6">
+        <p class="instructions first-set"> Click on a card to turn it over. You can turn over two cards in one turn. If the two cards you turn over match, you clear that match!</p>
+        <p class="instructions second-set"> This is one-player memory game. Your objective is to clear the board in the time alotted. Your only competitor is the clock.</p>
+      </div>
+      <div class="col-sm-1 "> </div>
+      <div class="col-sm-2 palm-tree"> </div>
+    </div>
+
+
+  <a href="game.html" class="white-button big-button homepage-button">Start Game</a>
+
+
 
 
 
