--- a/game.html
+++ b/game.html
@@ -52,12 +52,10 @@
               <div class="col-xs-1 light"></div>
             </div>
 
-            <div class="row">
-              <div class="col-xs-1 edge"></div>
-              <div class="col-xs-10 game-content ">
-
-              </div>
-              <div class="col-xs-1 edge"></div>
+            <div class="row game-board-container">
+              <div class="col-lg-1 edge"></div>
+              <div class="col-lg-10" id="game-board"></div>
+              <div class="col-lg-1 edge"></div>
             </div>
 
             <div class="row">
