--- a/game.html
+++ b/game.html
@@ -14,7 +14,6 @@
        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
        crossorigin="anonymous">
      </script>
-     <script type="text/javascript" src="main.js"></script>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
      <link rel="stylesheet" href="scss/main.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -95,5 +94,8 @@
 
 
 
-
+  <script type="text/javascript" src="main.js"></script>
   </body>
+
+
+  </html>
