--- a/homepage.html
+++ b/homepage.html
@@ -21,6 +21,10 @@
   </head>
   <body class="homepage">
 
+    <audio autoplay>
+      <source src="audio/ocean-drive.mp3" type="audio/mpeg">
+    </audio>
+
     <div class="wrapper container-fluid">
       <div class="sign">
         <div class="row light-row">
@@ -67,7 +71,7 @@
 
 
     <div class="row">
-      <h3 class="instructions-title">Instructions</h3>
+      <h5 class="instructions-title">Instructions</h5>
     </div>
 
     <div class="row wrapper-instructions">
@@ -82,7 +86,7 @@
     </div>
 
 
-  <a href="game.html" class="white-button big-button homepage-button">Start Game</a>
+  <a href="game.html" class="white-button big-button homepage-button"><h5>Start Game</h5></a>
 
 
 
