not finalized, but functional

--- a/game.html
+++ b/game.html
@@ -24,6 +24,10 @@
       <source src="audio/ocean-drive.mp3" type="audio/mpeg">
     </audio>
 
+    <audio class="card-click" preload="auto">
+             <source src="audio/card-click.mp3"> </source>
+    </audio>
+
 
     <div class="wrapper container-fluid">
       <h1 class="white-font title animated bounceIn"><div class="game-palm-tree"></div> Miami Madness <div class="game-palm-tree"></div></h1>
@@ -31,8 +35,8 @@
       <div class="row mobile-game">
         <div class="col-sm-2 edge-content">
           <!-- <h4 class="white-font edge-item">Level 1</h4><br> -->
-          <h4 class="white-font edge-item">Timer</h4>
-          <h4 class="white-font edge-item">04:30</h4>
+          <h4 class="white-font edge-item">Time:</h4>
+          <h4 class="white-font edge-item" id="timer">60 s</h4>
           <!-- <div class="action-buttons">
             <button class="white-button side-button edge-item">Pause Game</button>
             <button class="white-button side-button edge-item">End Game</button>
