--- a/homepage.html
+++ b/homepage.html
@@ -25,6 +25,10 @@
       <source src="audio/ocean-drive.mp3" type="audio/mpeg">
     </audio>
 
+    <audio class="card-click" preload="auto">
+             <source src="audio/card-click.mp3"> </source>
+    </audio>
+
     <div class="wrapper container-fluid">
       <div class="sign">
         <div class="row light-row">
