altered media queries to work on phone

--- a/game.html
+++ b/game.html
@@ -53,7 +53,7 @@
                   <p>Congrats! You won the game!</p>
                 </div>
                 <div class="modal-footer">
-                  <a href="homepage.html" class="btn btn-secondary" data-dismiss="modal">End Game</a>
+                  <a href="index.html" class="btn btn-secondary" data-dismiss="modal">End Game</a>
                   <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">End Game</button> -->
                   <button type="button" class="btn btn-primary">Play Again!</button>
                 </div>
