--- a/game.html
+++ b/game.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Miami Memory Madness</title>
     <style>
       /*@font-face { font-family: Market-Deco; src: url('Market_Deco.ttf'); }*/
