added more sounds

--- a/game.html
+++ b/game.html
@@ -29,6 +29,14 @@
              <source src="audio/card-click.mp3"> </source>
     </audio>
 
+    <audio class="match-sound" preload="auto">
+             <source src="audio/bell-sound.mp3"> </source>
+    </audio>
+
+    <audio class="start-game" preload="auto">
+             <source src="audio/start-game.mp3"> </source>
+    </audio>
+
 
     <div class="wrapper container-fluid">
       <h1 class="white-font title animated bounceIn"><div class="game-palm-tree"></div> Miami Madness <div class="game-palm-tree"></div></h1>
